clusters/k4/kubernetes/apps/storage/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: storage
spec:
  description: "Allow kubeapi for storage namespace since most pod use it"
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "3300"
              protocol: ANY
            - port: "6789"
              protocol: ANY
